--- a/java/pom.xml
+++ b/java/pom.xml
@@ -23,7 +23,7 @@
                         <configuration>
                         <transformers>
                             <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                            <mainClass>processor.Evaluator</mainClass>
+                            <mainClass>.main</mainClass>
                             </transformer>
                         </transformers>
                         </configuration>
